Corrected spacing of home page recent work cards

--- a/css/style.css
+++ b/css/style.css
@@ -406,11 +406,11 @@ ul li {
     max-width: 480px;
     display: inline-flex;
     flex-wrap: wrap;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .recent_work_image_container a:nth-child(2n+1) {
-    margin-right: 2%;
+    margin-right: 2rem;
 }
 
 .recent_work_image_container a,
@@ -1519,6 +1519,7 @@ p,
 
     .recent_work_image_container a {
         width: 49%;
+        margin-bottom: 1.5rem;
     }
 
     .recent_work_image_container a:nth-child(2n+1) {
